# pynpxpipe

./: .gitignore  CLAUDE.md  LICENSE  README.md  getting_started.md  getting_started_cn.md  pyproject.toml  smoke_test_harness.py
.claude/: settings.local.json
.prompt4claude/: task1_analyze_codebase.md  task2_write_claudemd.md  task3_improve_claudemd.md  task4_write_architecture.md  task5_inspect_sync.md  task6_inspect_resource.md  task7_update_caludemd&archmd.md
config/: pipeline.yaml  pipeline_E2.yaml  sorting.yaml  sorting_E1.yaml  sorting_E2.yaml  sorting_E3.yaml
docs/: ROADMAP.md  architecture.md  legacy_analysis.md  progress.md  release_prep_design.md  release_prep_plan.md  resource_design.md  round7_validation_design.md  sync_analysis.md  tech_debt_audit.md  todo.md  tutorial_01_discover_design.md  tutorial_01_discover_plan.md  tutorial_02_preprocess_sort_design.md  tutorial_02_preprocess_sort_plan.md
docs/adr/: 001-sync-stage-ordering.md  002-spikeinterface-api-verification.md  003-phase-shift-positioning.md  template.md
docs/ground_truth/: analyze_todo.md  bhv2_consumption_analysis.md  bhv2_verification_report.txt  export_ground_truth.m  step1_entry_structure.md  step2_input_consumption.md  step3_output_analysis.md  step4_full_pipeline_analysis.md  step5_matlab_vs_python.md  verify_bhv2_structure.m
docs/specs/: REVISION_PLAN.md  a5_app_layout.md  base.md  baseline_before_sessionid.md  best_practices.md  bhv.md  bhv2_binary_format.md  bhv2_matlab_analysis.md  bhv2_reader.md  bhv_nidq_align.md  chat_help.md  checkpoint.md  cli_main.md  config.md  curate.md  derivatives.md  discover.md  export.md  imec_nidq_align.md  llm_client.md  logging.md  m2_implementation_plan.md  merge.md  motion_memory_advisor.md  nwb_reader.md  nwb_rerun.md  nwb_writer.md  photodiode_calibrate.md  plots.md  postprocess.md  preprocess.md  probe_region_editor.md  resources.md  runner.md  session.md  smoke_test_harness.md  sort.md  spikeglx.md  stim_resolver.md  sync_plots.md  (+4 more)
docs/superpowers/plans/: 2026-04-02-spikeinterface-api-verification.md
docs/superpowers/specs/: 2025-04-30-b-s1-design.md
docs/temp/: api_verification_needed.md  project_review.md
docs/validation/: per_unit_analysis.md  pipeline_diff_audit.md  round8_E1_E2.md  rsm_report.md  task2_real_smoke.md  trial_143_outlier.md
legacy_reference/pyneuralpipe/: GUI_IMPLEMENTATION_SUMMARY.md  NPX_session_process.ipynb  PyNeuralPipeline_developplan.md  README.md  config_editor_gui.py  diagnose_data.py  process_session.py  requirements.txt  run_config_editor.bat  run_config_editor.sh  try_nwb.ipynb
legacy_reference/pyneuralpipe/Util/: Load_Data_function.m  PostProcess_function.m  PostProcess_function_raw.m  mlbhv2.m  run_bc.m
legacy_reference/pyneuralpipe/config/: data_integrator.yaml  data_loader.yaml  nwbsession_template.yaml  quality_controller.yaml  spike_sorter.yaml  synchronizer.yaml
legacy_reference/pyneuralpipe/core/: __init__.py  data_integrator.py  data_loader.py  data_loader_bk.py  quality_controller.py  spike_sorter.py  synchronizer.py  synchronizer_bk.py
legacy_reference/pyneuralpipe/monkeys/: JianJian.yaml  MaoDan.yaml
legacy_reference/pyneuralpipe/process_pipeline_matlab/: Analysis_Fast.ipynb  Process_pipeline_2504.m  ReadME.txt  gen_globaL_par.m
legacy_reference/pyneuralpipe/tests/: nwb_bombcell_helper.py  nwb_stim_helper.py  pipeline_test.ipynb  savenwb.py  savenwb_README.md
legacy_reference/pyneuralpipe/utils/: __init__.py  config_manager.py  directory_checker.py  error_handler.py  logger.py  nwb_bombcell_helper.py  nwb_stim_helper.py
monkeys/: JianJian.yaml  MaoDan.yaml  MonkeyTemplate.yaml
scripts/: export_phase2_derivatives.py  verify_spikeinterface_api.py
src/pynpxpipe/: __init__.py
src/pynpxpipe/agent/: __init__.py  chat_harness.py  llm_client.py
src/pynpxpipe/cli/: __init__.py  (+1 more)
tests/: conftest.py  test_install_smoke.py
tests/integration/: harness.py
tests/test_agent/: test_chat_harness.py  test_llm_client.py
tests/test_cli/: test_main.py
tests/test_core/: test_checkpoint.py  test_config_builders.py  test_config_dataclasses.py  test_config_integration.py  test_config_load.py  test_config_validation.py  test_errors.py  test_logging.py  test_resources.py  test_session.py  test_torch_env.py
tests/test_harness/: test_classifier.py  test_export_safety_contract.py  test_fixers.py  test_motion_strategy_contract.py  test_nidq_export_contract.py  test_nwb_clock_contract.py  test_preflight.py  test_provenance_contract.py  test_reporter.py  test_sessionid_contract.py  test_sync_tables_contract.py  test_validators.py  test_verify_safe_contract.py
tests/test_io/: __init__.py  test_bhv.py  test_bhv2_reader.py  test_bhv_nidq_align.py  test_derivatives.py  test_imec_nidq_align.py  test_nwb_reader.py  test_nwb_writer.py  test_photodiode_calibrate.py  test_spikeglx.py  test_stim_resolver.py
tests/test_pipelines/: test_nwb_rerun.py
tests/test_plots/: test_bombcell.py  test_curate.py  test_postprocess.py  test_preprocess.py  test_style.py  test_sync.py
tests/test_stages/: __init__.py  test_base.py  test_curate.py  test_discover.py  test_export.py  test_merge.py  test_postprocess.py  test_preprocess.py  test_runner.py  test_sort.py  test_synchronize.py
tests/test_ui/: test_app.py  test_browsable_input.py  test_chat_help.py  test_components.py  test_figs_viewer.py  test_probe_region_editor.py  test_rerun_derivatives.py  test_run_panel.py  test_session_form.py  test_session_loader.py  test_state.py  test_status_view.py
tools/: cuda_matrix.yaml  diag_pair_spatial.py  diag_pair_spatial_unitprop.py  diag_pair_waveforms.py  diag_per_unit_reliability.py  diag_pipeline_agreement.py  diag_psth_gallery.py  diag_rdm_ablation.py  diag_rdm_ablation_plot.py  diag_rsm_compare.py  diag_rsm_splithalf.py  diag_unit_pairing.py  diag_v8_rerun.py  harness_export_raw.py  install_sort_stack.py  rerun_ks4_validation.py  run_ablation.py  smoke_task2_nwb_rerun_demo.py  spec_drift_harness.py  verify_gpu.py  verify_nwb_shift_roundtrip.py
tutorials/: 01_discover_pipeline.ipynb  02_preprocess_sort.ipynb
(+87 files in other folders)
